#
# Richie package
#
[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "richie"
dynamic = ["version"]
description = "A CMS to build learning portals for open education"
readme = "README.md"
authors = [{ "name" = "Open FUN (France Université Numérique)", "email" = "fun.dev@fun-mooc.fr" }]
license = { file = "LICENSE" }
keywords = ["Django", "Django-CMS", "Open edX"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "arrow",
    "Django<5",
    "djangocms-file",
    "djangocms-googlemap",
    "djangocms-link",
    "djangocms-picture",
    "djangocms-text-ckeditor",
    "djangocms-video",
    "djangorestframework",
    "django-autocomplete-light==3.11.0",
    "django-cms>=3.11.0,<4.0.0",
    "django-parler>=2.3",
    "django-redis>=4.11.0",
    "django-treebeard",
    "dj-pagination",
    "easy_thumbnails[svg]>=2.8",
    "elasticsearch>=6.0.0,<7.0.0",
    "exrex==0.11.0",
    "importlib-metadata",
    "oauthlib==3.2.2",
    "requests==2.32.3",
]

[project.urls]
"Bug Tracker" = "https://github.com/openfun/richie/issues/new"
"Changelog" = "https://github.com/openfun/richie/blob/master/CHANGELOG.md"
"Homepage" = "https://github.com/openfun/richie"
"Repository" = "https://github.com/openfun/richie"
"Documentation" = "https://richie.education/"
"Demonstration website" = "https://demo.richie.education/"

[tool.setuptools]
packages = { find = { where = ["src"], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[project.optional-dependencies]
dev = [
    "bandit==1.7.9",
    "black==24.4.2",
    "pyRdfa3==3.6.2",
    "cssselect==1.2.0",
    "factory-boy==3.3.0",
    "flake8==7.1.0",
    "flake8-pyproject==1.2.3",
    "htmlmin==0.1.12",
    "ipdb==0.13.13",
    "ipython==8.26.0",
    "isort==5.13.2",
    "lxml==5.2.2",
    "msgpack==1.0.8",
    "mysqlclient==2.2.4",
    "pylint==3.2.5",
    "pylint-django==2.5.5",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-django==4.8.0",
    "responses==0.25.3",
]
ci = [
    "twine==5.1.1",
]
sandbox = [
    "django-configurations==2.5.1",
    "dockerflow==2024.4.2",
    "factory-boy==3.3.0",
    "gunicorn==22.0.0",
    "psycopg2-binary==2.9.9",
    "sentry-sdk==2.7.1",
]

[tool.flake8]
max-line-length = 99
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
    "node_modules",
    "*/migrations/*",
]

[tool.isort]
profile = "black"
known_django = "django"
known_richie = "richie"
include_trailing_comma = true
line_length = 88
multi_line_output = 3
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","RICHIE","FIRSTPARTY","LOCALFOLDER"]
skip_glob = "src/frontend/node_modules/**/*,venv"

[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing"
python_files = [
    "test_*.py",
    "tests.py"
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:::(?!(tests|richie))",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
