;;
;; Richie package
;;
[metadata]
name = richie
version = 2.14.0
description = A CMS to build learning portals for open education
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/richie
license = MIT
keywords = Django, Django-CMS, Open edX
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
# When you install a new package, if you do not want our renovate bot checks
# updates for it, please add the exact name of the package within
# `matchPackageNames` (in the "ignored python dependencies" group) within
# renovate.json file at the root of this repository
install_requires =
    arrow
    Django
    dj-pagination
    django-cms>=3.9.0
    django-parler>=2.0.1
    djangocms-file
    djangocms-googlemap
    djangocms-link
    djangocms-picture
    djangocms-text-ckeditor
    djangocms-video
    djangorestframework
    elasticsearch>=6.0.0,<7.0.0
    social-auth-core[openidconnect]==4.2.0
    social-auth-app-django==3.1.0
    django-redis>=4.11.0
    django-treebeard
    exrex==0.10.5
    django-autocomplete-light==3.9.4
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.4
    black==22.3.0
    pyRdfa3==3.5.3
    cssselect==1.1.0
    factory-boy==3.2.1
    flake8==4.0.1
    htmlmin==0.1.12
    ipdb==0.13.9
    ipython==8.2.0
    isort==5.10.1
    lxml==4.8.0
    msgpack==1.0.3
    mysqlclient==2.1.0
    pylint==2.13.3
    pylint-django==2.5.3
    pytest==7.1.1
    pytest-cov==3.0.0
    pytest-django==4.5.2
    responses==0.20.0
ci =
    twine==3.8.0
sandbox =
    django-configurations==2.3.2
    dockerflow==2022.1.0
    factory-boy==3.2.1
    gunicorn==20.1.0
    psycopg2-binary==2.9.3
    sentry-sdk==1.5.8

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_django=django
known_richie=richie
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,RICHIE,FIRSTPARTY,LOCALFOLDER
skip_glob=src/frontend/node_modules/**/*,venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests
filterwarnings =
    ignore:::(?!(tests|richie))
