;;
;; Third-party packages configuration
;;
[metadata]
name = {{cookiecutter.site}}

[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
profile=black
known_django=django
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip_glob=src/frontend/node_modules/**/*,venv
